[package]
name = "libveezi"
version = "0.4.0"
authors = ["Logan Devine <logan@noyotheater.com>"]
edition = "2024"
description = "A Rust client for the Veezi API"
documentation = "https://docs.rs/libveezi"
readme = "README.md"
repository = "https://github.com/NoyoTheater/libveezi"
license = "MIT"
keywords = ["veezi", "api", "client", "theater", "cinema"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.28"
moka = { version = "0.12.11", features = ["future", "log", "logging"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
url = "2.5.0"
